use redis for auth cache.
